# ebook2audiobook

./: .dockerignore  .editorconfig  .env.client-server.example  .env.distributed.example  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ANALYSE_ERREURS.md  ANALYSE_RESUME.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DIAGRAM.md  CHECKPOINT_DOCKER.md  CHECKPOINT_RESUME.md  CLIENT_SERVER_ARCHITECTURE.md  DEVELOPMENT.md  DEV_SETUP.md  DISTRIBUTED_MODE.md  DISTRIBUTED_MODE_GUIDE.md  DISTRIBUTED_MODE_INDEX.md  DISTRIBUTED_MODE_PLAN.md  DISTRIBUTED_MODE_SUMMARY.md  DOCKER-COMPOSE-DISTRIBUTED.md  DOCKER_BUILD_OPTIMIZATION.md  DOCKER_INPUT_OUTPUT.md  DOCKER_MODELS.md  DOCKER_TEST_CHECKLIST.md  Dockerfile  Dockerfile.worker  GUIDE_DEMARRAGE_RAPIDE.md  IMPLEMENTATION_GUIDE.md  MIGRATION_GUIDE.md  Makefile  PHASE2_SUMMARY.md  PYTEST_DOCKER_FIX.md  QUICKSTART-DISTRIBUTED.md  README-DISTRIBUTED-SIMPLE.md  README-DISTRIBUTED.md  README.md  (+27 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  entrypoint.sh  post-create.sh
.github/workflows/: e2e-tests.yml
docs/distributed/: CONCATENATION_ARCHITECTURE.md  CPU_GPU_SUPPORT.md
lib/: __init__.py  checkpoint_manager.py  context.py  distributed_manager.py  functions.py  session_persistence.py
lib/audio/: __init__.py  combiner.py  converter.py  exporter.py
lib/classes/tts_engines/: coqui.py
lib/core/: __init__.py  exceptions.py
lib/core/session/: __init__.py  session_manager.py  session_tracker.py  session_utils.py
lib/distributed/: __init__.py  celery_app.py  checkpoint_manager.py  coordinator.py  storage.py  tasks.py  worker.py
lib/ebook/: __init__.py  converter.py  extractor.py  metadata.py  models.py
lib/file/: __init__.py  extractor.py  hasher.py  manager.py  utils.py  validator.py
lib/system/: __init__.py  programs.py  resources.py  utils.py
lib/text/: __init__.py  date_converter.py  math_converter.py  normalizer.py  number_converter.py  processor.py  sentence_splitter.py  utils.py
lib/text/tokenizers/: __init__.py
scripts/: start-client-server.sh  start-distributed.sh
scripts/distributed/: README.md  build-worker-image.sh  demo-local.sh  setup-cluster.sh  start-coordinator.sh  start-worker.sh  test-setup.sh
tests/: PRODUCTION_READINESS.md  README.md  __init__.py  conftest.py  test_example.py
tests/e2e/: __init__.py  test_basic_conversion.py  test_error_handling.py  test_session_persistence.py
tests/test_audio/: test_combiner.py  test_converter.py  test_exporter.py
tests/test_text/: test_date_converter.py  test_math_converter.py  test_number_converter.py  test_processor.py  test_sentence_splitter.py
