[build-system]
name = "ebook2audiobook"
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ebook2audiobook"
version = "0.0.0"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}

[project]
name = "ebook2audiobook"
description = "Convert eBooks to audiobooks with chapters and metadata"
authors = [
    { name = "Drew Thomasson" }
]
dependencies = [
	"argostranslate",
	"beautifulsoup4",
	"cutlet",
	"deep_translator",
	"demucs",
	"docker",
	"ebooklib",
	"fastapi",
	"fugashi",
	"gradio>=5.42.0",
	"hangul-romanize",
	"indic-nlp-library",
	"iso-639",
	"jieba",
	"soynlp",
	"pythainlp",
	"pydub",
	"pyannote-audio",
	"mutagen",
	"nvidia-ml-py",
	"PyOpenGL",
	"pypinyin",
	"ray",
	"regex",
	"translate",
	"tqdm",
	"unidic",
	"pymupdf4llm",
	"sudachipy",
	"sudachidict_core",
	"transformers==4.51.3",
	"coqui-tts[languages]==0.26.0",
	"torchvggish"
]
readme = "README.md"
requires-python = ">3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
scripts = { "ebook2audiobook" = "app:main" }

[project.urls]

"Homepage" = "https://github.com/DrewThomasson/ebook2audiobook"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | tmp
  | models
  | voices
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/tmp/*", "*/models/*", "*/voices/*"]
known_first_party = ["lib"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "gradio.*",
    "coqui.*",
    "transformers.*",
    "torch.*",
    "torchaudio.*",
    "pydub.*",
    "ebooklib.*",
    "pyannote.*",
    "demucs.*",
    "mutagen.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=lib",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["lib"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/tmp/*",
    "*/models/*",
    "*/voices/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Pylint configuration
[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "C0103", # invalid-name
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
    "R0913", # too-many-arguments
    "W0212", # protected-access
    "W0511", # fixme
    "E1101", # no-member (too many false positives with dynamic libraries)
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "x", "y"]

# Bandit configuration (security linting)
[tool.bandit]
exclude_dirs = ["/tests", "/tmp", "/models", "/voices"]
skips = ["B101", "B601"]

# Radon configuration (code complexity)
[tool.radon]
exclude = "*/tests/*,*/tmp/*,*/models/*,*/voices/*"
